logs/app.log
2026-01-23 14:12:43,951 ERROR: Exception on / [GET] [en C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\flask\app.py:875]
Traceback (most recent call last):
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\flask\app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\flask\app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\flask\app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\flask\app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^
  File "C:\Users\Gabriel\informes-automotor\app.py", line 378, in inicio
    return render_template('inicio.html')
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\flask\templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\jinja2\environment.py", line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\jinja2\environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\jinja2\environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\jinja2\loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\jinja2\environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
    ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Gabriel\informes-automotor\venv\Lib\site-packages\jinja2\environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "C:\Users\Gabriel\informes-automotor\templates\inicio.html", line 191, in template
    {% endblock %}
jinja2.exceptions.TemplateSyntaxError: Unexpected end of template. Jinja was looking for the following tags: 'endblock'. The innermost block that needs to be closed is 'block'.
2026-01-31 11:48:06,295 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-01-31 11:55:19,473 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-01-31 12:01:07,278 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-01-31 12:05:52,547 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-01-31 12:09:38,154 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-01-31 16:08:02,438 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:02:49,869 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:03:59,189 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:04:41,635 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:05:02,973 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:13:44,446 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:14:33,257 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:16:43,519 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:18:37,440 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:19:21,754 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:20:06,787 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:22:27,635 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:24:23,409 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:45:00,929 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:51:34,874 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:52:24,696 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 18:53:24,702 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 19:09:58,134 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-01 19:13:04,276 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-26 15:41:37,459 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-26 15:44:53,265 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-26 15:46:56,258 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-26 15:47:35,909 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-26 15:48:10,622 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-26 15:49:09,826 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-26 15:52:40,815 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-02-26 17:46:57,752 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-03-03 21:00:43,454 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-03-03 21:21:03,608 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-03-03 21:22:01,121 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-03-03 21:43:05,153 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-03-03 21:43:52,216 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-03-03 21:45:51,711 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-06-07 08:01:16,719 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-06-07 08:16:21,462 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:78]
2026-06-09 10:26:10,010 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:81]
2026-06-09 10:27:01,672 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:81]
2026-06-11 22:10:25,463 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:81]
2026-06-11 22:14:23,086 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:81]
2026-06-11 22:15:43,030 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:81]
2026-06-11 22:15:56,862 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:81]
2026-06-11 22:16:54,531 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:81]
2026-06-11 22:17:04,013 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:81]
2026-06-11 22:17:20,871 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:81]
2026-06-11 22:17:41,140 INFO: Aplicación iniciada [en C:\Users\Gabriel\informes-automotor\app.py:81]
